@@ -1,11 +1,11 @@
-package source.vue;
+package source.view;
 
 import org.jxmapviewer.viewer.*;
 import org.jxmapviewer.JXMapViewer;
 import org.jxmapviewer.painter.CompoundPainter;
 import org.jxmapviewer.painter.Painter;
 import org.jxmapviewer.OSMTileFactoryInfo;
-import source.model.Vertice;
+import source.model.Vertex;
 
 
 import javax.swing.*;
@@ -17,25 +17,26 @@ import java.util.List;
 
 public class MapDisplay {
 
-    public static void afficherNoeuds(List mapPlan){
+    private JXMapViewer mapViewer;
+
+    public MapDisplay(){
+        mapViewer = new JXMapViewer();
+        // Initialisation de la carte via OpenStreetMap
+        OSMTileFactoryInfo info = new OSMTileFactoryInfo();
+        DefaultTileFactory tileFactory = new DefaultTileFactory(info);
+        mapViewer.setTileFactory(tileFactory);
+        // Initialisation des paramètres de la carte
+        mapViewer.setZoom(3);
+    }
+
+    public void afficherNoeuds(List<Vertex> vertices){
         try {
-            // Initialisation du map viewer
-            JXMapViewer mapViewer = new JXMapViewer();
 
-            // Initialisation de la carte via OpenStreetMap
-            OSMTileFactoryInfo info = new OSMTileFactoryInfo();
-            DefaultTileFactory tileFactory = new DefaultTileFactory(info);
-            mapViewer.setTileFactory(tileFactory);
-
-            List<Vertice> vertices = (List<Vertice>) mapPlan.get(0);
-
-            // Initialisation des paramètres de la carte
-            mapViewer.setZoom(3);
             //mapViewer.setAddressLocation(new GeoPosition(45.75555, 4.86922));
-            mapViewer.setAddressLocation(new GeoPosition(vertices.get(0).getLatitude(), vertices.get(0).getLongitude()));
+            mapViewer.setAddressLocation(new GeoPosition(vertices.getFirst().getLatitude(), vertices.getFirst().getLongitude()));
             // Création de la collection d'objets "Waypoints" à partir de la liste de Noeud obtenue avec le xml parser
             Set<Waypoint> waypoints = new HashSet<>();
-            for (Vertice node : vertices) {
+            for (Vertex node : vertices) {
                 waypoints.add(new DefaultWaypoint(new GeoPosition(node.getLatitude(), node.getLongitude())));
             }
 
@@ -50,11 +51,11 @@ public class MapDisplay {
                     if (e.getWheelRotation() < 0) {
                         // Zoom avant
                         int currentZoom = mapViewer.getZoom();
-                        mapViewer.setZoom(Math.max(currentZoom - 1, info.getMinimumZoomLevel()));
+                        mapViewer.setZoom(Math.max(currentZoom - 1, mapViewer.getTileFactory().getInfo().getMinimumZoomLevel()));
                     } else {
                         // Zoom arrière
                         int currentZoom = mapViewer.getZoom();
-                        mapViewer.setZoom(Math.min(currentZoom + 1, info.getMaximumZoomLevel()));
+                        mapViewer.setZoom(Math.min(currentZoom + 1, mapViewer.getTileFactory().getInfo().getMaximumZoomLevel()));
                     }
                 }
             });
@@ -65,21 +66,13 @@ public class MapDisplay {
 
             CompoundPainter<JXMapViewer> painter = new CompoundPainter<>(painters);
             mapViewer.setOverlayPainter(painter);
-            Dimension dimension = Toolkit.getDefaultToolkit().getScreenSize();
-            int screenHeight = dimension.height;
-            int screenWidth = dimension.width;
-            JFrame frame = new JFrame("Visualisation des noeuds");
-            frame.getContentPane().add(new JScrollPane(mapViewer));
-            frame.setSize(screenWidth, screenHeight);
-            frame.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
-            frame.setVisible(true);
         } catch (Exception e) {
             System.out.println(e);
         }
-
-
-
     }
 
+    public JXMapViewer getMapViewer() {
+        return mapViewer;
+    }
 }
 
